@@ -1,7 +1,13 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
 
-  25 Jul 2005; Roy Marples <uberlord@gentoo.org>
+  25 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:
+
+    If we do not have net services, check both boot and current runlevel for
+    net services in trace_dependencies().  Sort services and make sure they
+    are unique.
+
+  25 Jul 2005; Roy Marples <uberlord@gentoo.org>:
 
     trace_dependencies no longer clobbers the net service.
 
